<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/phone"/>

            <EditText
                android:id="@+id/Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/size"/>

            <CheckBox
                android:id="@+id/Smoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smoke" />

            <CheckBox
                android:id="@+id/NonSmoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nonsmoke" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:calendarViewShown="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonDisplayDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/display_date" />

                <Button
                    android:id="@+id/buttonDisplayTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/display_time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset" />

                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
